Sua lai style va them bottom

--- a/Css/style.css
+++ b/Css/style.css
@@ -6,9 +6,10 @@ body{
     background: url("../Image/background.jpg");
 }
 .body_page{
+    padding: 0;
     margin: 0 auto;
     width: 1000px;
-    background-color: #999999;
+    background-color: #D9D9D9;
 }
 /*Style của phần menu top*/
 a {
@@ -21,6 +22,9 @@ a:hover {
 }
 .nav{
     margin-top: 0;
+}
+.main_menu ul{
+    padding: 0;
 }
 .main_menu {
     background: url("../Image/bg-mainmenu1.png") repeat-x scroll left center rgba(0, 0, 0, 0);
@@ -102,6 +106,45 @@ a:hover {
 #NewSearchForm .submit {
     margin-left: 5px;
     /*margin-top: 10px;*/
+}
+/*Style của bottom*/
+#bottom-menu {
+    background-color: #FFFFFF;
+    border: 1px solid #C7C7C7;
+    border-radius: 3px;
+    display: block;
+    height: 30px;
+    width: 980px;
+    margin-left: 10px;
+    margin-top: 5px;
+}
+#bottom-menu ul {
+    display: block;
+    height: 30px;
+    margin: 0 auto;
+    width: 100%;
+    padding: 0;
+}
+#bottom-menu ul li {
+    float: left;
+    line-height: 30px;
+    list-style: none outside none;
+    padding: 0 10px;
+}
+.text_bottom{
+    margin-top: 5px;
+    margin-left: 15px;
+}
+.text_bottom div{
+    padding: 5px;
+    color: #535353;
+}
+.text_bottom .Copyright{
+    font-size: 13px;
+    font-weight: bold;
+}
+.text_bottom div a{
+    color: #000000;
 }
 /*Style của phần banner*/
 .banner{
