create the first

--- a/Css/style.css
+++ b/Css/style.css
@@ -153,3 +153,44 @@ a:hover {
     width: 1000px;
     height: 185px;
 }
+/*Style phần tin mới*/
+#feature-news {
+    background: url("../Image/bg-feature-news.png") repeat-x scroll left center #393939;
+    height: 31px;
+    line-height: 31px;
+    width: 100%;
+    margin-bottom: 5px;
+}
+#feature-news span {
+    color: #FFFFFF;
+    display: inline-block;
+    font-weight: bold;
+    padding: 0 10px;
+    text-transform: uppercase;
+}
+#feature-news a {
+    color: #FFFFFF;
+    font-weight: normal;
+}
+/*Style body page*/
+.body_left{
+    background: none repeat scroll 0 0 #FFFFFF;
+    float: left;
+    height: 100%;
+    margin-right: 5px;
+    position: relative;
+    width: 715px;
+}
+.body_right{
+    height: 100%;
+    width: 280px;
+    float: right;
+    margin-right: 0;
+    background: none repeat scroll 0 0 #FFFFFF;
+    position: relative;
+    padding: 0;
+}
+.body{
+    margin: 0 auto;
+    width: 1000px;
+}
